Add paging to get all items endpoint.
